p3/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maddou
  labels:
    app: maddou-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maddou-playground
  template:
    metadata:
      labels:
        app: maddou-playground
    spec:
      containers:
      - name: maddou-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
