p3/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maddou
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: maddou-playground
status:
  loadBalancer: {}
