p3/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
spec:
  rules:
  - host: app.com
    http:
      paths:
      - backend:
          service:
            name: maddou
            port:
              number: 8888
        path: /
        pathType: Prefix
